policies/apps.yaml
# Paperless: allow from Traefik
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-paperless
  namespace: server
  labels:
    app.kubernetes.io/component: policy
    app.kubernetes.io/part-of: server
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: paperless
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 8000
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
---
# Paperless Gotenberg: allow from Paperless
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-paperless-gotenberg
  namespace: server
  labels:
    app.kubernetes.io/component: policy
    app.kubernetes.io/part-of: server
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: paperless-gotenberg
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 3000
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: paperless
---
# Paperless Tika: allow from Paperless
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-paperless-tika
  namespace: server
  labels:
    app.kubernetes.io/component: policy
    app.kubernetes.io/part-of: server
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: paperless-tika
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 9998
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: paperless
---
# Vaultwarden: allow from Traefik
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-vaultwarden
  namespace: server
  labels:
    app.kubernetes.io/component: policy
    app.kubernetes.io/part-of: server
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 80
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
---
# Mealie: allow from Traefik
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mealie
  namespace: server
  labels:
    app.kubernetes.io/component: policy
    app.kubernetes.io/part-of: server
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: mealie
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 9000
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
---
# Uptime Kuma: allow from Traefik
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-uptime-kuma
  namespace: server
  labels:
    app.kubernetes.io/component: policy
    app.kubernetes.io/part-of: server
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: uptime-kuma
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 3001
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
---
# Plant-it: allow from Traefik
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-plant-it
  namespace: server
  labels:
    app.kubernetes.io/component: policy
    app.kubernetes.io/part-of: server
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: plant-it
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 3000
        - port: 8080
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
---
# Home Assistant: allow from Traefik
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-home-assistant
  namespace: server
  labels:
    app.kubernetes.io/component: policy
    app.kubernetes.io/part-of: server
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 8123
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
---
